Shifted the bottom image down because it overlapped due to header height changes. Fixed the navbar incorrectly showing in the footer.

--- a/frontend/assets/stylesheets/components/_bundle-header.scss
+++ b/frontend/assets/stylesheets/components/_bundle-header.scss
@@ -35,7 +35,7 @@
         border-color: $white;
     }
 
-    .global-navigation__item--right {
+    .global-navigation {
         display: none;
     }
 
