--- a/frontend/assets/stylesheets/components/_bundle-support-us.scss
+++ b/frontend/assets/stylesheets/components/_bundle-support-us.scss
@@ -48,7 +48,7 @@
 
 .bundle-support__content {
     background: guss-colour(comment-support-2);
-    margin-bottom: 78px;
+    margin-bottom: 102px;
 }
 
 .bundle-support__content__body {
